Bump org.springframework.boot from 2.7.0 to 2.7.1 (#51)
* Bump org.springframework.boot from 2.7.0 to 2.7.1

Bumps [org.springframework.boot](https://github.com/spring-projects/spring-boot) from 2.7.0 to 2.7.1.
- [Release notes](https://github.com/spring-projects/spring-boot/releases)
- [Commits](https://github.com/spring-projects/spring-boot/compare/v2.7.0...v2.7.1)

---
updated-dependencies:
- dependency-name: org.springframework.boot
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Update badge

* Update selenide to version 6.6.5

* Improve code

* Improve code

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Branislav Beno <branislav.beno@siemens.com>
Co-authored-by: Branislav Beno <brano.beno@gmail.com>