@@ -1,16 +1,13 @@
 /**
- * 
+ *
  */
 package com.sprint.controllers;
 
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.stream.Collectors;
-
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.sprint.model.SprintGoal;
+import com.sprint.model.TeamGoal;
+import com.sprint.repository.impl.SprintGoalDAO;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,11 +16,7 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.sprint.model.SprintGoal;
-import com.sprint.model.TeamGoal;
-import com.sprint.repository.impl.SprintGoalDAO;
+import java.util.*;
 
 /**
  * The Class SprintGoalController.
@@ -33,148 +26,151 @@ import com.sprint.repository.impl.SprintGoalDAO;
 @Controller
 public class SprintGoalController {
 
-	/** The log. */
-	private static Log log = LogFactory.getLog(SprintGoalController.class);
+    /**
+     * The log.
+     */
+    private static final Log LOG = LogFactory.getLog(SprintGoalController.class);
 
-	/** The Constant TEAM_TABLE_PREFIX. */
-	private static final String TEAM_TABLE_PREFIX = "team_";
+    /**
+     * The Constant TEAM_TABLE_PREFIX.
+     */
+    private static final String TEAM_TABLE_PREFIX = "team_";
 
-	/** The sprint goals. */
-	private SprintGoalDAO sprints;
+    /**
+     * The sprint goals.
+     */
+    private final SprintGoalDAO sprints;
 
-	/**
-	 * Instantiates a new sprint goal controller.
-	 *
-	 * @param dao the dao
-	 */
-	@Autowired
-	public SprintGoalController(SprintGoalDAO dao) {
-		this.sprints = dao;
-	}
+    /**
+     * Instantiates a new sprint goal controller.
+     *
+     * @param dao the dao
+     */
+    @Autowired
+    public SprintGoalController(SprintGoalDAO dao) {
+        this.sprints = dao;
+    }
 
-	/**
-	 * Find sprint by label.
-	 *
-	 * @param label the label
-	 * @return the list
-	 */
-	private List<SprintGoal> findSprintByLabel(final String label) {
-		// Initialize list of teams
-		List<SprintGoal> teams = null;
-		try {
-			teams = sprints.getListOfTables().stream().filter(t -> t.startsWith(TEAM_TABLE_PREFIX))
-					.map(tn -> sprints.getSprintByLabel(tn, label)).collect(Collectors.toList());
-		} catch (Exception e) {
-			try {
-				teams = sprints.getListOfTables().stream().filter(t -> t.startsWith(TEAM_TABLE_PREFIX))
-						.map(tn -> sprints.getSprintById(tn, sprints.getRowCount(tn))).collect(Collectors.toList());
-			} catch (SQLException e1) {
-				log.warn("No sprint goal data found.");
-			}
-		}
+    /**
+     * Find sprint by label.
+     *
+     * @param label the label
+     * @return the list
+     */
+    private List<SprintGoal> findSprintByLabel(final String label) {
+        // Initialize list of teams
+        List<SprintGoal> teams = null;
+        try {
+            teams = sprints.getListOfTables().stream().filter(t -> t.startsWith(TEAM_TABLE_PREFIX))
+                    .map(tn -> sprints.getSprintByLabel(tn, label)).toList();
+        } catch (Exception e) {
+            try {
+                teams = sprints.getListOfTables().stream().filter(t -> t.startsWith(TEAM_TABLE_PREFIX))
+                        .map(tn -> sprints.getSprintById(tn, sprints.getRowCount(tn).orElse(0))).toList();
+            } catch (Exception e1) {
+                LOG.warn("No sprint goal data found.");
+            }
+        }
 
-		return teams;
-	}
+        return teams;
+    }
 
-	/**
-	 * Prepare team data.
-	 *
-	 * @param teams the teams
-	 * @return the list
-	 */
-	private List<TeamGoal> collectTeamGoals(List<SprintGoal> teams) {
-		// Initialize list with output parameters
-		List<TeamGoal> teamGoals = new ArrayList<>();
+    /**
+     * Prepare team data.
+     *
+     * @param teams the teams
+     * @return the list
+     */
+    private List<TeamGoal> collectTeamGoals(List<SprintGoal> teams) {
+        // Initialize list with output parameters
+        List<TeamGoal> teamGoals = new ArrayList<>();
 
-		for (SprintGoal team : teams) {
-			// Initialize array for goals
-			String[] goals = new String[] {};
+        for (SprintGoal team : teams) {
+            // Initialize array for goals
+            String[] goals = new String[]{};
 
-			// Initialize jackson mapper for json string
-			ObjectMapper mapper = new ObjectMapper();
-			// Fill goals array
-			try {
-				goals = mapper.readValue(team.getSprintGoals(), String[].class);
-			} catch (JsonProcessingException e) {
-				log.warn("Conversion from json to list of goals for team " + team.getTeamName() + " failed.");
-			}
+            // Initialize jackson mapper for json string
+            ObjectMapper mapper = new ObjectMapper();
+            // Fill goals array
+            try {
+                goals = mapper.readValue(team.getSprintGoals(), String[].class);
+            } catch (JsonProcessingException e) {
+                LOG.warn("Conversion from json to list of goals for team " + team.getTeamName() + " failed.");
+            }
 
-			// Add new entry with team name and team goals into list
-			teamGoals.add(new TeamGoal(team.getTeamName(), goals));
-		}
+            // Add new entry with team name and team goals into list
+            teamGoals.add(new TeamGoal(team.getTeamName(), goals));
+        }
 
-		return teamGoals;
-	}
+        return teamGoals;
+    }
 
-	/**
-	 * Collect sprints.
-	 *
-	 * @return the sets the
-	 * @throws SQLException the SQL exception
-	 */
-	private Set<String> collectSprints() throws SQLException {
-		// Initialize empty set of sprints
-		Set<String> sprintSet = new TreeSet<>();
+    /**
+     * Collect sprints.
+     *
+     * @return the sets the
+     */
+    private Set<String> collectSprints() {
+        // Initialize empty set of sprints
+        Set<String> sprintSet = new TreeSet<>();
 
-		// Get list of database tables related with team related sprint data
-		List<String> teams = sprints.getListOfTables().stream().filter(t -> t.startsWith(TEAM_TABLE_PREFIX))
-				.collect(Collectors.toList());
+        // Get list of database tables related with team related sprint data
+        List<String> teams = sprints.getListOfTables().stream().filter(t -> t.startsWith(TEAM_TABLE_PREFIX)).toList();
 
-		// Get set of sprint labels
-		if (!teams.isEmpty()) {
-			// Initialize counter
-			int i = 0;
-			// Get first set
-			sprintSet = new TreeSet<>(sprints.getSprintList(teams.get(i)));
+        // Get set of sprint labels
+        if (!teams.isEmpty()) {
+            // Initialize counter
+            int i = 0;
+            // Get first set
+            sprintSet = new TreeSet<>(sprints.getSprintList(teams.get(i)));
 
-			// Create intersection of sprint labels over all team related sprint data
-			for (i = 1; i < teams.size(); i++) {
-				Set<String> newSet = new TreeSet<>(sprints.getSprintList(teams.get(i)));
-				sprintSet.retainAll(newSet);
-			}
-		}
+            // Create intersection of sprint labels over all team related sprint data
+            for (i = 1; i < teams.size(); i++) {
+                Set<String> newSet = new TreeSet<>(sprints.getSprintList(teams.get(i)));
+                sprintSet.retainAll(newSet);
+            }
+        }
 
-		return sprintSet;
-	}
+        return sprintSet;
+    }
 
-	/**
-	 * Goals.
-	 *
-	 * @param label the label
-	 * @param model the model
-	 * @return the string
-	 * @throws SQLException the SQL exception
-	 */
-	@GetMapping("/goals")
-	public String goals(@RequestParam("sprint") String label, Model model) throws SQLException {
-		// Get list of sprint related team data
-		List<SprintGoal> teams = findSprintByLabel(label);
+    /**
+     * Goals.
+     *
+     * @param label the label
+     * @param model the model
+     * @return the string
+     */
+    @GetMapping("/goals")
+    public String goals(@RequestParam("sprint") String label, Model model) {
+        // Get list of sprint related team data
+        List<SprintGoal> teams = findSprintByLabel(label);
 
-		// In case that method parameter 'sprintLabel' is not compliant with data in
-		// database,
-		// last sprint related data record in database is chosen
-		// In that case is sprint label updated
-		if (teams != null)
-			label = teams.stream().findFirst().orElseThrow().getSprintLabel();
+        // In case that method parameter 'sprintLabel' is not compliant with data in
+        // database,
+        // last sprint related data record in database is chosen
+        // In that case is sprint label updated
+        List<TeamGoal> teamGoals = Collections.emptyList();
+        if (teams != null) {
+            label = teams.stream().findFirst().orElseThrow().getSprintLabel();
+            // Sort list of database tables
+            teams.sort(Comparator.comparing(SprintGoal::getTeamName));
+            // Collect list of team related sprint goals
+            teamGoals = collectTeamGoals(teams);
+        }
 
-		// Sort list of database tables
-		Collections.sort(teams, (a, b) -> a.getTeamName().compareTo(b.getTeamName()));
+        // Collect sprint labels for all available team related sprint data
+        Set<String> sprintSet = collectSprints();
 
-		// Collect list of team related sprint goals
-		List<TeamGoal> teamGoals = collectTeamGoals(teams);
+        // Add sprint label
+        model.addAttribute("mSprintLabel", label);
 
-		// Collect sprint labels for all available team related sprint data
-		Set<String> sprintSet = collectSprints();
+        // Add list of sprints
+        model.addAttribute("mSprintList", sprintSet);
 
-		// Add sprint label
-		model.addAttribute("mSprintLabel", label);
+        // Add list of team related sprint goals
+        model.addAttribute("mTeamGoals", teamGoals);
 
-		// Add list of sprints
-		model.addAttribute("mSprintList", sprintSet);
-
-		// Add list of team related sprint goals
-		model.addAttribute("mTeamGoals", teamGoals);
-
-		return "goals";
-	}
+        return "goals";
+    }
 }
